--- a/teaching.html
+++ b/teaching.html
@@ -9,7 +9,9 @@
       natural language processing machine translation probabilistic
       programming">
     <meta name="author" content="Lei Li">
-    <link href="style/style.min.css" rel="stylesheet" type="text/css">
+    <link href="style/style.css" rel="stylesheet" type="text/css">    
+    <script src="script/jquery-3.7.0.min.js"></script>
+    <script src="script/mobile.js"></script>
     <title>Lei LI's Courses and Talks</title>
   </head>
   <body class="page-template-template-home page-id-3">
@@ -36,11 +38,12 @@
       <nav class="navigation--mobile">
         <ul class="mobile-nav mobile-nav--main">
           <li><a href="index.html">Home</a></li>
-          <li><a href="research.html">Research</a></li>
+          <li><a href="https://leililab.github.io">Group</a></li>
           <li class="current-menu-item"><a href="teaching.html">Teaching</a></li>
-          <li> <a href="pubs.html">Publications</a> </li>
-          <li><a href="people.html">People</a></li>
-          <li><a href="https://lileicc.github.io/blog/">Blog</a></li>
+          <li><a href="resource.html">Resource</a></li>
+          <li><a href="leili-bio.html">Bio</a></li>
+          <!-- <li> <a href="pubs.html">Publications</a> </li> -->
+          <!-- <li><a href="https://lileicc.github.io/blog/">Blog</a></li> -->
         </ul>
       </nav>
     </div>
@@ -54,12 +57,12 @@
                   aria-label="Main Navigation" role="navigation">
                   <ul class="nav-list">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="research.html">Research</a></li>
-                    <li class="current-menu-item"><a
-                        href="teaching.html">Teaching</a></li>
-                    <li> <a href="pubs.html">Publications</a> </li>
-                    <li><a href="people.html">People</a></li>
-                    <li><a href="https://lileicc.github.io/blog/">Blog</a></li>
+                    <li><a href="https://leililab.github.io">Group</a></li>
+                    <li class="current-menu-item"><a href="teaching.html">Teaching</a></li>
+                    <li><a href="resource.html">Resource</a></li>
+                    <li><a href="leili-bio.html">Bio</a></li>
+                    <!-- <li> <a href="pubs.html">Publications</a> </li> -->
+                    <!-- <li><a href="https://lileicc.github.io/blog/">Blog</a></li> -->                    
                   </ul>
                 </nav>
               </div>
@@ -270,5 +273,19 @@ href="http://cesg.tamu.edu/seminar/fishbowl-teleseminar-fast-algorithms-for-mini
         </section>
       </main>
     </div>
+    <script type='text/javascript' src='script/mobile.js' id='site-js'></script>
+    <script type="text/javascript">
+      var sc_project = 3806228;
+      var sc_invisible = 1;
+      var sc_security = "eb912185";
+    </script>
+      <script type="text/javascript" src="https://www.statcounter.com/counter/counter.js">
+      <noscript><div class="statcounter"><a title="click tracking" href="http://statcounter.com/"
+        target="_blank"><img
+          class="statcounter"
+          src="http://c.statcounter.com/3806228/0/eb912185/1/"
+          alt="click tracking" /></a></div></noscript>
+        <!-- End of StatCounter Code for Default Guide -->
+    </script>
   </body>
 </html>
