--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
                   security of large language models, agentic LLM, and AI
                   for drug discovery and protein design. <br>
                 </p>
+                <p>
+                  Students at CMU are welcome to send me email regarding indendent/direct study, internship, and capstone projects. 
+                </p>
               </div>
             </div>
             <div class="photo-box-container">
