--- a/resource.html
+++ b/resource.html
@@ -252,6 +252,13 @@
               million articles in 12 languages. Average length per article is
               570 words. [<a href="https://dqwang122.github.io/projects/CALMS/">Project
                 URL] </a> [<a href="https://drive.google.com/file/d/1i9xfOkQ60kixj0rZ-kCo8UCo2fZ51fCY/view?usp=sharing">Data</a>]</li>
+            <li>
+              MTG: A large-scale multilingual dataset for text generation tasks. It consists of 6.9 million raw articles and 400 thousand annotated documents for story generation, question generation, title generation, and summarization in five languages, English, French, German, Spanish, and Chinese. <a href="https://mtg-benchmark.netlify.app/">Download data here</a>. 
+            </li>
+            <li>
+              SJN-210k: a dataset for jersey number recognition in soccer games. It contains 210,000 images for training and testing. <a href="https://openaccess.thecvf.com/content_cvpr_2018_workshops/w34/html/Li_Jersey_Number_Recognition_CVPR_2018_paper.html">Paper</a>. <a href="https://zenodo.org/records/14247819">Download data here</a>. 
+            </li>
+
           </ul>
         </div>
       </section>      
