--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             class="vh">Menu</span>
           <svg class="menu-icon" width="48" height="33"
             focusable="false">
-            <use href="#menu-icon"></use> </svg> </button> </div>
+            <use href="icons/icons.svg#menu-icon"></use> </svg> </button> </div>
     </header>
     <div id="mobile-nav-tray" class="mobile-nav-tray" aria-hidden="true">
       <div class="mobile-nav-header">
@@ -52,7 +52,7 @@
             class="vh">Menu</span>
           <svg class="menu-icon" width="48" height="33"
             focusable="false">
-            <use href="#menu-icon"></use> </svg>
+            <use href="icons/icons.svg#menu-icon"></use> </svg>
           </button> </div>
       <nav class="navigation--mobile">
         <ul class="mobile-nav mobile-nav--main">
