adding close icon

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             rel="home"> <span class="vh">Lei Li</span> </a> </div>
         <button type="button" class="js-toggle-nav close-button"
           aria-controls="mobile-nav-tray" aria-expanded="false"> <span
-            class="vh">Menu</span>
-          <svg class="menu-icon" width="48" height="33"
+            class="vh">Close</span>
+          <svg class="menu-icon-svg" width="33" height="33"
             focusable="false">
-            <use href="icons/icons.svg#menu-icon"></use> </svg>
+            <use href="icons/icons.svg#close-icon"></use> </svg>
           </button> </div>
       <nav class="navigation--mobile">
         <ul class="mobile-nav mobile-nav--main">
@@ -499,6 +499,7 @@
               </div>
               <div class="tab-pane" id="papers">
                 <ul>
+                  <li> Protein Design: EnzyGen - A unified generative AI model for 3000 families of enzymes [<a href="https://arxiv.org/abs/2405.08205">paper</a>. </li>
                   <li> LLM Reasoning (weak LLM helps strong LLM). [<a
                       href="https://arxiv.org/abs/2305.13829">arxiv</a>]
                   </li>
@@ -554,25 +555,12 @@
               </div>
               <div class="l-footer-item">
                 <h4 class="rectangle"> Twitter </h4>
-                <p> <span class="vh">Twitter:</span> <span
-                    itemprop="twitter">@lileics</span> </p>
+                <p> <span class="vh">Twitter:</span> <a href="https://x.com/lileics"
+                    >@lileics</a> </p>
               </div>
               <div class="l-footer-item">
                 <h4 class="rectangle"> Office </h4>
-                <p class="address-title h5"> <span itemprop="address">GHC
-
-
-
-
-
-
-
-
-
-
-
-
-                    6403 </span> </p>
+                <p class="address-title h5"> <span itemprop="address">GHC 6403 </span> </p>
               </div>
             </div>
           </div>
