--- a/teaching.html
+++ b/teaching.html
@@ -22,7 +22,7 @@
             class="vh">Menu</span>
           <svg class="menu-icon" width="48" height="33"
             focusable="false">
-            <use href="#menu-icon"></use> </svg> </button> </div>
+            <use href="icons/icons.svg#menu-icon"></use> </svg> </button> </div>
     </header>
     <div id="mobile-nav-tray" class="mobile-nav-tray" aria-hidden="true">
       <div class="mobile-nav-header">
@@ -34,7 +34,7 @@
             class="vh">Close</span>
           <svg class="menu-icon-svg" width="33" height="33"
             focusable="false">
-            <use href="#close-icon"></use> </svg> </button> </div>
+            <use href="icons/icons.svg#close-icon"></use> </svg> </button> </div>
       <nav class="navigation--mobile">
         <ul class="mobile-nav mobile-nav--main">
           <li><a href="index.html">Home</a></li>
@@ -80,14 +80,11 @@
         <section class="section">
           <div class="wrap">
             <ul>
-              <li><a moz-do-not-send="true"
-                  href="https://llmsystem.github.io/llmsystem2024spring/">CMU
-
-
-
-
-
-
+              <li><a href="https://llmsystem.github.io/llmsystem2025spring/">CMU
+                11868 Large Language Model Systems (graduate, Spring
+                2025)</a><br>
+              </li>
+              <li><a href="https://llmsystem.github.io/llmsystem2024spring/">CMU
                   11868 Large Language Model Systems (graduate, Spring
                   2024)</a><br>
               </li>
