added ACDL lecture slides.

--- a/teaching.html
+++ b/teaching.html
@@ -145,6 +145,18 @@ href="TALKS/deep_learning_for_answering_questions_leili_nlpcc_adl2016.pdf">Slide
               <h1>Talks</h1>
             </div>
             <ul>
+              <li>ACDL 2025 Talks, June 18, 2025. 
+                <ul>
+                  <li><a href="TALKS/LLM_Evaluation_leili_2025.6.18.pdf">  The Science of Evaluation for Large Language Models</a>
+                  </li>
+                  <li><a href="TALKS/LLM_post-training_leili_2025.6.18.pdf">Scalable Post-Training Optimization for Large Language Models</a>
+                  </li>
+                  <li><a href="TALKS/LLM_reasoning_leili_2025.6.18.pdf">Scaling Strategic Reasoning for Large Language Models</a>
+                  </li>
+                  <li><a href="TALKS/SimultaneousTranslation_InfiniSST_leili_2025.6.18.pdf">Real-time Simultaneous Translation of Unbounded Streaming Speech</a>
+                  </li>
+                </ul>
+              </li>
               <li>University of Massachusetts Boston Invited Talk: <a href="TALKS/multilingual-LLM-leili2024.11.pdf">Towards Scaling Large Language Models to 1000 Languages - Challenges and Advances</a>. Nov 4, 2024. </li>
               <li>Invited talk at MIT FutureTech Workshop on the Role of AI in Science: <a href="TALKS/Watermarking_and_AI_detection_leili2024.11.3.pdf"> Watermarking and Detecting AI Generation. Nov 3, 2024. </a></li>
               <li>Univ. of Pittsburgh ISP Seminar: <a href="TALKS/LLM_Evaluation_and_alignment2024.10.pdf">The Science of Evaluation
