--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
                 <h1>Lei Li</h1>
                 <h6>Carnegie Mellon University</h6>
                 <br>
-                <p> I am an Assistant Professor in the <a href="https://www.lti.cs.cmu.edu/">Language Technologies Institute</a> of the School of
+                <p> I am an Associate Professor in the <a href="https://www.lti.cs.cmu.edu/">Language Technologies Institute</a> of the School of
                   Computer Science at
                   <a href="https://www.cmu.edu/">Carnegie Mellon University</a>. I am also affiliated with
                   CMU <a moz-do-not-send="true"
-                    href="https://www.cylab.cmu.edu/">CyLab</a> and University of California Santa Barbara Computer Science Department. I work
+                    href="https://www.cylab.cmu.edu/">CyLab</a>, <a href="https://www.compbio.cmu.edu/index.html">CPCB</a>, and University of California Santa Barbara Computer Science Department. I work
                   on generative AI for language and science, including
                   multilingual NLP, machine translation (text, speech),
                   security of large language models, agentic LLM, and AI
